BuildHughes/translation-tool/inputs/source_meta/objects/Hsvc_Payu_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payu_Environment__c</fullName>
        <label>Payu Environment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Key__c</fullName>
        <label>Public Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Payu Configuration</label>
</CustomObject>